style: :lipstick: Fixed emoji vertical align

--- a/src/components/Markup.scss
+++ b/src/components/Markup.scss
@@ -125,7 +125,7 @@
 .markup .emoji {
   height: 1.5em;
   width: 1.5em;
-  vertical-align: -0.43em;
+  vertical-align: -0.4em;
 }
 
 .markup .mention {
